@@ -1,3 +1,5 @@
+* Add Eligibility Rule errors management
+
 Version 1.6 - 2015-12-23
 
 Version 1.4 - 2015-05-29
